--- a/back-end/env/.env
+++ b/back-end/env/.env
@@ -1,8 +1,8 @@
-DB_HOST = localhost
-DB_USER= root
-DB_PASSWORD= 
+DB_HOST = sql.freedb.tech
+DB_USER= freedb_despliegue
+DB_PASSWORD= 7&ga5&W?mXuHU3s
 DB_PORT = 3306
-DB_DATABSE=coffee_sensory
+DB_DATABSE=freedb_despliegue
 
 AUT_SECRET=seguridadenv
 AUT_EXPIRET= 24h
